[b]Version 0.5.61[/b] (not released yet):

(2007-10-05)
 * Now the icon for Windows (smplayer.ico) is bigger (48x48).
 * Updated the Chinese (zh_CN) translation.
 * Commented code to use an intermediate program for mplayer, 'cos it doesn't
   work at all.
 * Added new option for command line: -no-close-at-end, which is the opposite
   of -close-at-end.
 * Added two new options for command line: -fullscreen and -no-fullscreen.
   -fullscreen will play the video in fullscreen mode, while -no-fullscreen
   will play it in window mode. For simplification these options just modify 
   the option "Start videos in fullscreen" in Preferences->General->Video and 
   audio.

(2007-10-04)
 * Added some code to use an intermediate program for mplayer, when using
   Windows 98 and ME. Not tested yet. (Written in linux)

(2007-10-02)
 * Ported to Qt 4 the old code to handle subtitles. It seems we may need it.

(2007-10-01)
 * Added a work-around to try to fix a problem in windows. When using gl/gl2,
   minimize the window, when restored the video is black. The only fix I
   found until now is to restart mplayer.
 * Try to keep the video paused when changing volume. It doesn't work well
   because of limitations of mplayer.
 * Small fix: don't use the screenshot filter if the screenshot directory
   entered by the user is not a real directory.

(2007-09-30)
 * Updated the German translation.
 * Added USE_MULTIPLE_SHORTCUTS in config.h to enable or disable the new
   code for multiple shortcuts (enabled by default).
 * Deleted the actions inc_volume2 and dec_volume2 as now they are not 
   necessary. Their shortcuts are now in increase_volume and decrease_volume.
 * Activated again the new resize code.

(2007-09-28)
 * Now actions can have multiple shortcuts. That means that you can assign
   several keys for the same action. To do this, in the "modify shortcut"
   dialog in the actions editor, disable the "Capture" button and then